Refactoring Code PersonServiceImplTest